# libfoo

./: .gitignore  CMakeLists.txt  GNUMakefile  Makefile.am  README.rst  configure.ac
include/foo/: foo.h
src/: foo.cpp  fooclient.cpp
